// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllUrlsFromDocsConfig > no-version-no-tabs > gets all urls from docs config 1`] = `
[
  "docs/api/section-1/page-1",
  "docs/api/page-2",
  "docs/api/section-2",
  "docs/api/section-2/page-4",
  "docs/api/page-5",
  "docs/api/page-6",
]
`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/page-6 1`] = `
{
  "apiReference": undefined,
  "breadcrumb": [
    "Section 3",
  ],
  "currentTab": undefined,
  "currentVersion": undefined,
  "next": undefined,
  "node": {
    "hidden": undefined,
    "icon": undefined,
    "id": "root.uv.section-3.page-6",
    "pageId": "page-6.md",
    "slug": "docs/api/page-6",
    "title": "Page 6",
    "type": "page",
  },
  "prev": {
    "hidden": undefined,
    "icon": undefined,
    "id": "root.uv.section-3.page-5",
    "pageId": "page-5.md",
    "slug": "docs/api/page-5",
    "title": "Page 5",
    "type": "page",
  },
  "root": {
    "child": {
      "children": [
        {
          "children": [
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-1.page-1",
              "pageId": "page-1.md",
              "slug": "docs/api/section-1/page-1",
              "title": "Page 1",
              "type": "page",
            },
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-1.page-2",
              "pageId": "page-2.md",
              "slug": "docs/api/page-2",
              "title": "Page 2",
              "type": "page",
            },
          ],
          "collapsed": false,
          "hidden": undefined,
          "icon": undefined,
          "id": "root.uv.section-1",
          "overviewPageId": undefined,
          "pointsTo": "docs/api/section-1/page-1",
          "slug": "docs/api/section-1",
          "title": "Section 1",
          "type": "section",
        },
        {
          "children": [
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-2.page-3",
              "pageId": "page-3.md",
              "slug": "docs/api/section-2",
              "title": "Page 3",
              "type": "page",
            },
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-2.page-4",
              "pageId": "page-4.md",
              "slug": "docs/api/section-2/page-4",
              "title": "Page 4",
              "type": "page",
            },
          ],
          "collapsed": false,
          "hidden": undefined,
          "icon": undefined,
          "id": "root.uv.section-2",
          "overviewPageId": undefined,
          "pointsTo": "docs/api/section-2",
          "slug": "docs/api/section-2",
          "title": "Introduction",
          "type": "section",
        },
        {
          "children": [
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-3.page-5",
              "pageId": "page-5.md",
              "slug": "docs/api/page-5",
              "title": "Page 5",
              "type": "page",
            },
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-3.page-6",
              "pageId": "page-6.md",
              "slug": "docs/api/page-6",
              "title": "Page 6",
              "type": "page",
            },
          ],
          "collapsed": false,
          "hidden": undefined,
          "icon": undefined,
          "id": "root.uv.section-3",
          "overviewPageId": undefined,
          "pointsTo": "docs/api/page-5",
          "slug": "docs/api",
          "title": "Section 3",
          "type": "section",
        },
      ],
      "id": "root.uv",
      "type": "sidebarRoot",
    },
    "hidden": false,
    "icon": undefined,
    "id": "root",
    "pointsTo": "docs/api/section-1/page-1",
    "slug": "docs/api",
    "title": "Fern Docs",
    "type": "root",
  },
  "sidebar": {
    "children": [
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-1.page-1",
            "pageId": "page-1.md",
            "slug": "docs/api/section-1/page-1",
            "title": "Page 1",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-1.page-2",
            "pageId": "page-2.md",
            "slug": "docs/api/page-2",
            "title": "Page 2",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.section-1",
        "overviewPageId": undefined,
        "pointsTo": "docs/api/section-1/page-1",
        "slug": "docs/api/section-1",
        "title": "Section 1",
        "type": "section",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-2.page-3",
            "pageId": "page-3.md",
            "slug": "docs/api/section-2",
            "title": "Page 3",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-2.page-4",
            "pageId": "page-4.md",
            "slug": "docs/api/section-2/page-4",
            "title": "Page 4",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.section-2",
        "overviewPageId": undefined,
        "pointsTo": "docs/api/section-2",
        "slug": "docs/api/section-2",
        "title": "Introduction",
        "type": "section",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-3.page-5",
            "pageId": "page-5.md",
            "slug": "docs/api/page-5",
            "title": "Page 5",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-3.page-6",
            "pageId": "page-6.md",
            "slug": "docs/api/page-6",
            "title": "Page 6",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.section-3",
        "overviewPageId": undefined,
        "pointsTo": "docs/api/page-5",
        "slug": "docs/api",
        "title": "Section 3",
        "type": "section",
      },
    ],
    "id": "root.uv",
    "type": "sidebarRoot",
  },
  "tabs": [],
  "type": "found",
  "versions": [],
}
`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/section-2 1`] = `
{
  "apiReference": undefined,
  "breadcrumb": [
    "Introduction",
  ],
  "currentTab": undefined,
  "currentVersion": undefined,
  "next": {
    "hidden": undefined,
    "icon": undefined,
    "id": "root.uv.section-2.page-4",
    "pageId": "page-4.md",
    "slug": "docs/api/section-2/page-4",
    "title": "Page 4",
    "type": "page",
  },
  "node": {
    "hidden": undefined,
    "icon": undefined,
    "id": "root.uv.section-2.page-3",
    "pageId": "page-3.md",
    "slug": "docs/api/section-2",
    "title": "Page 3",
    "type": "page",
  },
  "prev": {
    "hidden": undefined,
    "icon": undefined,
    "id": "root.uv.section-1.page-2",
    "pageId": "page-2.md",
    "slug": "docs/api/page-2",
    "title": "Page 2",
    "type": "page",
  },
  "root": {
    "child": {
      "children": [
        {
          "children": [
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-1.page-1",
              "pageId": "page-1.md",
              "slug": "docs/api/section-1/page-1",
              "title": "Page 1",
              "type": "page",
            },
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-1.page-2",
              "pageId": "page-2.md",
              "slug": "docs/api/page-2",
              "title": "Page 2",
              "type": "page",
            },
          ],
          "collapsed": false,
          "hidden": undefined,
          "icon": undefined,
          "id": "root.uv.section-1",
          "overviewPageId": undefined,
          "pointsTo": "docs/api/section-1/page-1",
          "slug": "docs/api/section-1",
          "title": "Section 1",
          "type": "section",
        },
        {
          "children": [
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-2.page-3",
              "pageId": "page-3.md",
              "slug": "docs/api/section-2",
              "title": "Page 3",
              "type": "page",
            },
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-2.page-4",
              "pageId": "page-4.md",
              "slug": "docs/api/section-2/page-4",
              "title": "Page 4",
              "type": "page",
            },
          ],
          "collapsed": false,
          "hidden": undefined,
          "icon": undefined,
          "id": "root.uv.section-2",
          "overviewPageId": undefined,
          "pointsTo": "docs/api/section-2",
          "slug": "docs/api/section-2",
          "title": "Introduction",
          "type": "section",
        },
        {
          "children": [
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-3.page-5",
              "pageId": "page-5.md",
              "slug": "docs/api/page-5",
              "title": "Page 5",
              "type": "page",
            },
            {
              "hidden": undefined,
              "icon": undefined,
              "id": "root.uv.section-3.page-6",
              "pageId": "page-6.md",
              "slug": "docs/api/page-6",
              "title": "Page 6",
              "type": "page",
            },
          ],
          "collapsed": false,
          "hidden": undefined,
          "icon": undefined,
          "id": "root.uv.section-3",
          "overviewPageId": undefined,
          "pointsTo": "docs/api/page-5",
          "slug": "docs/api",
          "title": "Section 3",
          "type": "section",
        },
      ],
      "id": "root.uv",
      "type": "sidebarRoot",
    },
    "hidden": false,
    "icon": undefined,
    "id": "root",
    "pointsTo": "docs/api/section-1/page-1",
    "slug": "docs/api",
    "title": "Fern Docs",
    "type": "root",
  },
  "sidebar": {
    "children": [
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-1.page-1",
            "pageId": "page-1.md",
            "slug": "docs/api/section-1/page-1",
            "title": "Page 1",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-1.page-2",
            "pageId": "page-2.md",
            "slug": "docs/api/page-2",
            "title": "Page 2",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.section-1",
        "overviewPageId": undefined,
        "pointsTo": "docs/api/section-1/page-1",
        "slug": "docs/api/section-1",
        "title": "Section 1",
        "type": "section",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-2.page-3",
            "pageId": "page-3.md",
            "slug": "docs/api/section-2",
            "title": "Page 3",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-2.page-4",
            "pageId": "page-4.md",
            "slug": "docs/api/section-2/page-4",
            "title": "Page 4",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.section-2",
        "overviewPageId": undefined,
        "pointsTo": "docs/api/section-2",
        "slug": "docs/api/section-2",
        "title": "Introduction",
        "type": "section",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-3.page-5",
            "pageId": "page-5.md",
            "slug": "docs/api/page-5",
            "title": "Page 5",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.section-3.page-6",
            "pageId": "page-6.md",
            "slug": "docs/api/page-6",
            "title": "Page 6",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.section-3",
        "overviewPageId": undefined,
        "pointsTo": "docs/api/page-5",
        "slug": "docs/api",
        "title": "Section 3",
        "type": "section",
      },
    ],
    "id": "root.uv",
    "type": "sidebarRoot",
  },
  "tabs": [],
  "type": "found",
  "versions": [],
}
`;
